working example + new android project

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 /Library
 /obj
+/Temp
+/out.apk
+/UnityVS.AndroidSSLExample.CSharp.csproj
+/UnityVS.AndroidSSLExample.sln
+/UnityVS.AndroidSSLExample.v12.suo
+/androidhttpsplugin-release.aar
