--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /UnityVS.AndroidSSLExample.sln
 /UnityVS.AndroidSSLExample.v12.suo
 /androidhttpsplugin-release.aar
+/UnityVS.AndroidHttpsExample.CSharp.Plugins.csproj
+/UnityVS.AndroidHttpsExample.CSharp.csproj
+/UnityVS.AndroidHttpsExample.sln
+/UnityVS.AndroidHttpsExample.v12.suo
